Front/trifont_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: trifront
  namespace: tricountapp
spec:
  selector:
    app: trifront
  ports:
  - port: 80
    targetPort: 80
